# images-web-app

./: .gitignore  README.md
images-api/: Dockerfile  Makefile  pyproject.toml
images-api/app/: app.py  app_config.py  sql_config.py
images-api/app/common/: __init__.py  exceptions.py
images-api/application/: __init__.py  app.py  app_config.py  sql_config.py
images-api/application/common/: converters.py  exceptions.py
images-api/application/images/: controller.py  exceptions.py  models.py  repository.py  schema.py  service.py
images-api/application/pages/: assets_controller.py  controller.py  css_controller.py  js_controller.py
images-api/application/users/: controller.py  exceptions.py  models.py  repository.py  schema.py  service.py
images-api/deployment/app/: config.json
images-api/tests/integrational/: conftest.py
images-api/tests/integrational/users/: test_controller_create_user.py
images-api/views/: index.html  profile.html  signup.html  upload.html
images-api/views/css/: normilize.css  style.css  table.css
images-api/views/js/: core.js  script.js  user.js
