[tool.poetry]
name = "images-api"
version = "0.1.0"
description = ""
authors = ["Dan Gost <t.me@dangost>"]
license = "Apache-2.0 License"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
Flask = "^2.0.3"
pytest = "^7.1.1"
pyinstaller = "^4.10"
poethepoet = "^0.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
