[tool.poetry]
name = "images-api"
version = "0.1.0"
description = ""
authors = ["Dan Gost <t.me@dangost>"]
license = "Apache-2.0 License"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
Flask = "^2.0.3"
pyinstaller = "^4.10"
poethepoet = "^0.13.1"
SQLAlchemy = "^1.4.32"
python-dotenv = "^0.19.2"
gunicorn = "^20.1.0"
PyJWT = "^2.3.0"
marshmallow = "^3.15.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[tool.poe.tasks]
dev = "python -m application.app"
prod = "gunicorn -w 1 -b 0.0.0.0:8080 \"application.app:create_app()\""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
